Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Change_Log__c/Training_Change_Log__c.object-meta.xml
<CustomObject>
    <label>Training Change Log</label>
    <nameField>
        <label>Training Change Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>