Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Change_Log__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Undeleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>