Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Change_Log__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>