Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Change_Log__c/fields/Changed_On__c.field-meta.xml
<CustomField>
    <fullName>Changed_On__c</fullName>
    <description>When the change occurred</description>
    <label>Changed On</label>
    <type>DateTime</type>
</CustomField>