Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Change_Log__c/fields/Employee_Training__c.field-meta.xml
<CustomField>
    <fullName>Employee_Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Training</label>
    <referenceTo>Employee_Training__c</referenceTo>
    <relationshipLabel>Training Change Logs</relationshipLabel>
    <relationshipName>Training_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>