Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Change_Log__c/fields/Field_Changes__c.field-meta.xml
<CustomField>
    <fullName>Field_Changes__c</fullName>
    <description>Summary of changed fields</description>
    <label>Field Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>